[tool.poetry]
name = "lab4"
version = "0.1.0"
description = ""
authors = ["danilkonkov <buroroll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.2.2"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
